--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         </div>
       </div>
     </div>
+    <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
   </main>
 </body>
 </html>
