--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
               <span></span>Add to Cart
             </button>
         </div>
-      </div>
-    </div>
-    <div class="attribution">
+      </div> <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Abdur-Rafiq Morenikeji</a>.
   </div>
+    </div>
+   
   </main>
 </body>
 </html>
