--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
         <div class="summary__container">
             <button class="container__button">
               <span></span>Add to Cart
-            </button>
-        </div>
-      </div> <div class="attribution">
+            </button> <br>
+          <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Abdur-Rafiq Morenikeji</a>.
   </div>
+        </div>
+      </div> 
     </div>
    
   </main>
